--- a/trading-ai-analysis/requirements.txt
+++ b/trading-ai-analysis/requirements.txt
@@ -5,4 +5,5 @@ python-dotenv==1.0.0
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 numpy==1.26.3
-scikit-learn==1.3.2 
+scikit-learn==1.3.2
+schedule==1.2.1 
