--- a/trading-ai-analysis/requirements.txt
+++ b/trading-ai-analysis/requirements.txt
@@ -6,4 +6,7 @@ sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 numpy==1.26.3
 scikit-learn==1.3.2
-schedule==1.2.1 
+schedule==1.2.1
+matplotlib==3.8.2
+seaborn==0.13.1
+plotly==5.18.0 
