--- a/trading-ai-analysis/requirements.txt
+++ b/trading-ai-analysis/requirements.txt
@@ -9,4 +9,6 @@ scikit-learn==1.3.2
 schedule==1.2.1
 matplotlib==3.8.2
 seaborn==0.13.1
-plotly==5.18.0 
+plotly==5.18.0
+psutil==5.9.7
+accelerate==0.25.0 
