--- a/trading-data-pipeline/requirements.txt
+++ b/trading-data-pipeline/requirements.txt
@@ -12,3 +12,4 @@ scikit-learn==1.3.2  # Für Datenverarbeitung
 python-dateutil==2.9.0.post0  # Für Datums- und Zeitverarbeitung
 pytz==2024.1  # Für Zeitzonen-Handling
 tqdm==4.66.2  # Für Fortschrittsbalken
+yfinance==0.2.35  # Für Yahoo Finance API
