--- a/trading-ai-analysis/requirements.txt
+++ b/trading-ai-analysis/requirements.txt
@@ -17,4 +17,6 @@ torch>=2.1.0
 transformers>=4.35.0
 python-binance>=1.0.0
 ccxt>=4.1.0
-safetensors>=0.4.0 
+safetensors>=0.4.0
+psutil>=5.9.0
+accelerate>=0.25.0
