--- a/trading-ai-analysis/requirements.txt
+++ b/trading-ai-analysis/requirements.txt
@@ -7,3 +7,5 @@ transformers==4.40.0
 torch==2.3.0
 accelerate==0.30.1
 sqlalchemy>=2.0.0
+colorama==0.4.6  # Für farbige Konsolenausgabe
+python-dotenv==1.0.0  # Für Umgebungsvariablen
