--- a/trading-ai-analysis/requirements.txt
+++ b/trading-ai-analysis/requirements.txt
@@ -1,4 +1,5 @@
 backtrader==1.9.76.123
+backtesting==0.5.0  # Für Backtesting-Funktionalität
 ta==0.10.2  # Technische Indikatoren (Alternative zu ta-lib)
 pandas==2.1.4  # Wird von ta benötigt
 numpy==1.26.4  # Wird von ta benötigt
@@ -9,3 +10,4 @@ accelerate==0.30.1
 sqlalchemy>=2.0.0
 colorama==0.4.6  # Für farbige Konsolenausgabe
 python-dotenv==1.0.0  # Für Umgebungsvariablen
+psycopg2-binary==2.9.9  # PostgreSQL Adapter
