Add hardware logging and psutil dependency
- Add psutil to requirements.txt for system resource monitoring
- Implement `log_hardware_info()` method in AILogger to capture system and hardware details
- Log CPU, RAM, and GPU information during initialization
- Detect and report available hardware resources (cores, threads, memory)
- Provide comprehensive hardware configuration logging with platform and device details

--- a/trading-ai-analysis/requirements.txt
+++ b/trading-ai-analysis/requirements.txt
@@ -11,3 +11,4 @@ sqlalchemy>=2.0.0
 colorama==0.4.6  # Für farbige Konsolenausgabe
 python-dotenv==1.0.0  # Für Umgebungsvariablen
 psycopg2-binary==2.9.9  # PostgreSQL Adapter
+psutil==5.9.8  # Für System- und Hardware-Informationen
